# WhiteBlack

./: .gitignore  index.html  package-lock.json  package.json  vite.config.js
Rust/: .gitignore  Cargo.toml  tauri.conf.json
Rust/src/: lib.rs  main.rs
Views/: App.vue  main.js
Views/components/: Greet.vue
Views/components/Layout/: footer.vue
